# mascot-render-server

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md  _config.yml  for_local.bat  mascot-render-server.toml  psd-viewer-tui.toml
crates/mascot-render-client/: Cargo.toml
crates/mascot-render-client/src/: client.rs  lib.rs
crates/mascot-render-client/src/tests/: client.rs
crates/mascot-render-control/: Cargo.toml
crates/mascot-render-control/src/: command.rs  http_server.rs  lib.rs  logging.rs  orchestration.rs  paths.rs  spawn.rs  timeline.rs
crates/mascot-render-control/src/http_server/: http_protocol.rs  mod.rs
crates/mascot-render-control/src/tests/: http_server.rs  logging.rs  mod.rs  orchestration.rs  timeline.rs
crates/mascot-render-core/: Cargo.toml
crates/mascot-render-core/src/: api.rs  archive.rs  cache.rs  cache_progress.rs  core.rs  eye_blink.rs  layer_name_format.rs  lib.rs  logging.rs  mascot.rs  mascot_motion.rs  mascot_paths.rs  model.rs  mouth_flap.rs  psd.rs  render.rs  rgba_cache.rs  skin_details.rs  variation.rs  workspace_paths.rs  workspace_update.rs
crates/mascot-render-core/src/eye_blink/: visibility.rs
crates/mascot-render-core/src/mascot/: config_files.rs
crates/mascot-render-core/src/mascot_motion/: sampling.rs  test_support.rs
crates/mascot-render-core/src/mouth_flap/: diagnostics.rs  visibility.rs
crates/mascot-render-core/src/tests/: archive.rs  cache.rs  cache_progress.rs  core.rs  eye_blink.rs  logging.rs  mascot.rs  mascot_motion.rs  mod.rs  mouth_flap.rs  psd.rs  render.rs  rgba_cache.rs  skin_details.rs  variation.rs  workspace_paths.rs  workspace_update.rs
crates/mascot-render-core/src/tests/mascot/: cli_and_paths.rs  config_roundtrip.rs  favorite_ensemble.rs  legacy_rejections.rs
crates/mascot-render-server/: Cargo.toml  build.rs
crates/mascot-render-server/src/: always_bend.rs  app_support.rs  cli.rs  eye_blink.rs  eye_blink_timing.rs  favorite_ensemble.rs  favorite_gallery.rs  favorite_shuffle.rs  lib.rs  main.rs  mascot_app.rs  mascot_control.rs  mascot_scale.rs  mascot_skin_cache.rs  motion_timeline.rs  mouth_flap.rs  psd_file_name_catalog.rs  server_log.rs  transparent_hit_test.rs  window_history.rs  window_layout.rs  window_region.rs  window_region_sync.rs
crates/mascot-render-server/src/favorite_ensemble/: persistence.rs  sanitize.rs
crates/mascot-render-server/src/favorite_shuffle/: favorites_store.rs
crates/mascot-render-server/src/mascot_app/: character.rs  config.rs  control.rs  ensemble.rs  layout.rs  logging.rs  persistence.rs  runtime.rs  scale.rs  skins.rs  status.rs
crates/mascot-render-server/src/tests/: always_bend.rs  app_support.rs  character_resolver.rs  cli.rs  eye_blink.rs  eye_blink_timing.rs  favorite_ensemble.rs  favorite_gallery.rs  favorite_shuffle.rs  mascot_app_logging.rs  mascot_app_persistence.rs  mascot_app_reload.rs  mascot_app_status.rs  mascot_control.rs  mascot_scale.rs  mascot_skin_cache.rs  mod.rs  psd_file_name_catalog.rs  runtime.rs  server_log.rs  transparent_hit_test.rs  window_history.rs  window_layout.rs  window_region.rs  window_region_sync.rs
crates/mascot-render-server/src/tests/favorite_shuffle/: helpers.rs
crates/mascot-render-status-tui/: Cargo.toml
crates/mascot-render-status-tui/src/: actions.rs  main.rs  performance_log.rs  performance_log_style.rs  poller.rs  startup.rs  state.rs  terminal.rs  ui.rs
crates/mascot-render-status-tui/src/tests/: actions.rs  mod.rs  performance_log.rs  performance_log_style.rs  state.rs  ui.rs
crates/psd-viewer-tui/: Cargo.toml
crates/psd-viewer-tui/src/: activity_heartbeat.rs  activity_indicator.rs  app.rs  cli.rs  display_diff_state.rs  favorites.rs  main.rs  server_motion_sync.rs  server_preview_sync.rs  terminal.rs  tui_config.rs  tui_history.rs  ui.rs  workspace_state.rs
crates/psd-viewer-tui/src/app/: eye_blink.rs  favorite_ensemble.rs  favorites.rs  info.rs  layer_scroll.rs  library.rs  mascot_scale.rs  mouth_flap.rs  preview.rs  selection.rs  startup.rs  support.rs  timing.rs
crates/psd-viewer-tui/src/tests/: activity_heartbeat.rs  cli.rs  display_diff_state.rs  eye_blink.rs  favorite_ensemble.rs  favorites.rs  favorites_app.rs  favorites_entries.rs  help_overlay.rs  keybindings.rs  layer_toggle_keys.rs  library.rs  mod.rs  mouth_flap.rs  selection_timing.rs  server_preview_sync.rs  startup.rs  startup_loader.rs  tui_config.rs  tui_history.rs
crates/psd-viewer-tui/src/ui/: overlay.rs  style.rs
crates/tui-sixel-preview/: Cargo.toml
crates/tui-sixel-preview/src/: lib.rs  logging.rs  picker.rs  state.rs  workspace_paths.rs
crates/tui-sixel-preview/src/tests/: logging.rs  mod.rs  preview_state.rs
issue-notes/: 1.md  10.md  104.md  106.md  107.md  108.md  109.md  11.md  113.md  114.md  115.md  12.md  122.md  123.md  125.md  126.md  135.md  137.md  139.md  141.md  143.md  145.md  146.md  147.md  148.md  155.md  160.md  164.md  (+42 more)
(+9 files in other folders)
