[workspace]
members = [
    "crates/mascot-render-core",
    "crates/mascot-render-test-support",
    "crates/mascot-render-protocol",
    "crates/psd-viewer-tui",
    "crates/mascot-render-client",
    "crates/mascot-render-control",
    "crates/tui-sixel-preview",
    "crates/mascot-render-server",
    "crates/mascot-render-status-tui",
]
resolver = "2"

[patch.crates-io]
rawpsd = { path = "vendor/rawpsd" }

