[package]
name = "mascot-render-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
mascot-render-protocol = { path = "../mascot-render-protocol" }
serde_json = "1"

[dev-dependencies]
ctor = "0.4"
mascot-render-test-support = { path = "../mascot-render-test-support" }

