[package]
name = "mascot-render-control"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
mascot-render-client = { path = "../mascot-render-client" }
mascot-render-protocol = { path = "../mascot-render-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["formatting", "macros"] }

[dev-dependencies]
ctor = "0.4"
mascot-render-test-support = { path = "../mascot-render-test-support" }
