[package]
name = "mascot-render-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mascot_render_core"

[dependencies]
anyhow = "1"
cat-self-update-lib = { git = "https://github.com/cat2151/cat-self-update" }
eframe = "0.33"
encoding_rs = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
rawpsd = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
zip = "2"

[dev-dependencies]
ctor = "0.4"
mascot-render-test-support = { path = "../mascot-render-test-support" }
