[package]
name = "mascot-render-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mascot-render-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
eframe = "0.33"
mascot-render-client = { path = "../mascot-render-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mascot-render-core = { path = "../mascot-render-core" }
toml = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
