[package]
name = "tui-sixel-preview"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui = "0.30"
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
